--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ remote_theme: raviriley/agency-jekyll-theme
 url    : "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/portifolio-lucaszarpellon" #"/agency-jekyll-theme-starter" # the subpath of your site, e.g. /blog
 
-title      : Hello, welcome to my portifolio!
+title      : Data portifolio!
 email      : lucasiz.zarpellon0@gmail.com #this is also the email contact forms will go to
 description: "Agency Bootstrap theme converted to a Jekyll theme, plus new features: Google Analytics, Markdown support, custom pages, and more!"
 author     : Lucas Ingles Zarpellon
