--- a/_data/style.yml
+++ b/_data/style.yml
@@ -1,6 +1,6 @@
 #Color Customization
-highlight: "#0B79D9"
-white: "#F26A4B"
+#highlight: "#0B79D9"
+#white: "#F26A4B"
 #black: "#000"
 
 #Image Customization
